# vlm_learn

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  config.toml  config.toml.example  hello_qwen.py  pytest.ini  requirements.txt
.github/workflows/: python-app.yml  security-audit.yml  vlm_master.yml
benchmarks/qwen/: hello_qwen.py
clip_exercise/: __init__.py  requirements.txt
clip_exercise/clip_work/: batch_resizer.py  object_detector.py  quarantine_validator.py  threshold_validator.py  vegetable_evaluator.py  video_auditor.py  visual_quality_auditor.py
diagnostics/: heartbeat_engine.py  launch_audit.sh  vram_monitor.py
genai/: Dockerfile  hello_genai.py  requirements.txt  streamlit_genai.py
genai/.streamlit/: secrets.toml
logs/: vlm_health.json
projects/: bulk_downloader.py  dashboard_status.py  fix_csv.py  gantt_chart.py  generate_subitizing_set.py  ground_truth.json  image_standardizer_batch.py  labeler.py  project_plan.csv  project_timeline.csv  project_update.py  stimuli_generator_subitizing.py  validate_ground_truth.py  vlm_summary.py
projects/archive/: describe_album_legacy.py
qwen_v2d5/captioning/: caption_image.ini  caption_image.py  compare_media.py  describe_album.py  describe_image.py  image2.py  (+1 more)
qwen_v3/: describe_image.py  describe_multiple.py  image_urls.txt  standard_example.py
src/: CMakeLists.txt  engine.cpp
tests/: __init__.py  conftest.py  smoke_test.py  test_engine_bridge.py  test_qwen_inference.py
utilities/: apply_license_headers.sh  check_vlm_health.py  check_vlm_health.sh  license_header.tmp
(+148 files in other folders)
